--- a/index.html
+++ b/index.html
@@ -160,6 +160,17 @@
 <footer class="py-4">
   <div class="container text-center">
     <p class="mb-0">© 2025 Elite Football Academy. All Rights Reserved.</p>
+    <a href="https://registry.scalar.com/@dinseythai/apis/zootopia2thailand/">Thaiunyat</a>
+    <a href="https://registry.scalar.com/@avatar3/apis/avatar3fireandashthaisub/">Thaiunyat</a>
+    <a href="https://registry.scalar.com/@sfcinema/apis/thecursedmask/">Thaiunyat</a>
+    <a href="https://registry.scalar.com/@sfcinema/apis/thelastshotthaibegu/">Thaiunyat</a>
+    <a href="https://registry.scalar.com/@sfcinema/apis/wicked2disney/">Thaiunyat</a>
+    <a href="https://registry.scalar.com/@sfcinema/apis/nobody2danimation/">Thaiunyat</a>
+    <a href="https://registry.scalar.com/@ourhousethai/apis/ourhousefhd/">Thaiunyat</a>
+    <a href="https://registry.scalar.com/@kogaloakvillagebilibili/apis/kogaloakvillagedubth/">Thaiunyat</a>
+    <a href="https://registry.scalar.com/@bilibilitv/apis/predatorbadlandsthaisub/">Thaiunyat</a>
+    <a href="https://registry.scalar.com/@bilibilitv/apis/anong2myboo/">Thaiunyat</a>
+    <a href="https://registry.scalar.com/@bilibilitv/apis/nootherchoicethaidubbed/">Thaiunyat</a>
   </div>
 </footer>
 
